# oecp

./: LICENSE  OECP工具测试标准.md  OECP详细说明.md  README.en.md  README.md  cli.py  requirement  similar_result_calculate.py
doc/: OECP工具嵌入式测试标准.md  OECP工具测试标准.md  OECP工具详细说明.md  OECP报告展示后端详细设计.md  OPCP报告展示前端详细设计.md  oecp详细设计文档-2.0.md  openEuler嵌入式兼容性认证（XXX公司）测试报告_Vx.x.docx
doc/imgs/: ISO文件导入流程  api开发视图  报告持久化流程  文件部署视图  服务部署视图
embedded-oecp/: .gitignore  LICENSE  README.en.md  README.md  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  检查说明.md
embedded-oecp/embedded_oecp/: __init__.py  cli.py  config.example.yaml  default_config.yaml  models.py  runner.py
embedded-oecp/embedded_oecp/assets/: embedded_osv_at.json  embedded_osv_posix.json  report_template.docx
embedded-oecp/embedded_oecp/cache/: __init__.py
embedded-oecp/embedded_oecp/checkers/: __init__.py
embedded-oecp/embedded_oecp/checkers/runtime/: at_test_checker.py  middleware_runtime_checker.py  posix_checker.py
embedded-oecp/embedded_oecp/checkers/source/: kernel_checker.py  middleware_checker.py  package_checker.py
embedded-oecp/embedded_oecp/report/: __init__.py  generator.py
embedded-oecp/embedded_oecp/utils/: config.py  env_yaml.py  git.py  logger.py  md5.py  screenshot.py  shell.py  terminal_screenshot.py
embedded-oecp/tests/: test_basic.py
embedded-oecp/workdir/conf/: config.yaml.sample
oecp-web/: docker-compose.yml  run.sh
oecp-web/api-service/: Dockerfile  conf.ini  oecp-report  oecpreport.service  requirements.txt  setup.py
oecp-web/web/: .env  (+6 more)
test/: ci.json  ci.py
(+276 files in other folders)
