# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
# [embedded-oecp] is licensed under the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at: http://license.coscl.org.cn/MulanPSL2

[metadata]
name = embedded-oecp
version = 1.0.0
description = openEuler Embedded OSV Compatibility Certification Tool
author = openEuler Community
license = MulanPSL-2.0

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml>=5.4
    python-docx>=0.8.11
    lxml>=4.6
    Pillow>=8.0
    paramiko>=2.7
    openpyxl>=3.0

[options.entry_points]
console_scripts =
    embedded-oecp = embedded_oecp.cli:main

[options.package_data]
embedded_oecp =
    default_config.yaml
    config.example.yaml
    assets/*.json
    assets/*.png
    assets/*.docx
